--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,4 @@
-.dashboard {
+/* .dashboard {
   background-color: rgba(255, 252, 252, 0.034);
   box-shadow: black 10px 10px 10px;
   width: 500px;
@@ -45,4 +45,4 @@
 
 .btn-blue {
   background-color: rgb(76, 0, 255)!important ;
-}
+} */
