--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@ a {
   --secondaryColor: rgb(253, 179, 5);
 }
 
+img {
+  width: 250px;
+  border-radius: 50%;
+  border: rgba(255, 255, 255, 0.212) solid 10px;
+}
+
 /* Mobile Styling */
 .App {
   min-height: 100vh;
