--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ a {
 img {
   width: 250px;
   border-radius: 50%;
-  border: rgba(255, 255, 255, 0.212) solid 10px;
+  border: rgba(195, 195, 195, 0.239) solid 10px;
 }
 
 /* Mobile Styling */
@@ -52,7 +52,7 @@ img {
 }
 
 body {
-  background-image:url(./img/Card-Background-mod-2.jpg);
+  background-image:url(./assets/img/Card-Background-mod.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -60,7 +60,7 @@ body {
   /* background-color: #313131; */
 
   /* background: rgb(74,73,73);
-  background: linear-gradient(225deg, rgba(74,73,73,1) 0%, rgba(87,87,106,1) 35%, rgba(0,0,0,0.9) 100%); */
+  background: linear-gradient(225deg, rgb(47, 47, 47) 0%, rgba(87,87,106,1) 35%, rgba(0,0,0,0.9) 100%); */
   color: #fff;
 }
 .navbar {
