--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,48 +1,77 @@
-/* .dashboard {
-  background-color: rgba(255, 252, 252, 0.034);
-  box-shadow: black 10px 10px 10px;
-  width: 500px;
-  margin: 50px auto 75px;
-  padding: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-  grid-column: 3/8;
-  
+.home {
+    width: var(--pageWidth);
+   background-image: url();
 }
 
-.dashboard h1 {
-  font-size: 50px;
+/* news-grid */
+.home .news-grid {
+    margin-bottom: 200px;
+    display: grid;
+    height: 600px;
+    grid-template-columns: repeat(3, 400px);
+    grid-template-rows: repeat(3, 200px);
+    gap: 15px;
 }
-.dashboard h2 {
-  font-size: 35px;
+.home .news-grid .grid-item {
+   display: block;
+   position: relative;
+   overflow: hidden;
 }
-.dashboard h3 {
-  margin-top: 25px;
-  font-size: 30px;
+.home .news-grid :nth-child(1){
+    grid-row: 1 / 3;
 }
-.dashboard button {
-  margin-top: 25px;
-  margin-left: 25px;
-  padding: 10px 15px;
-  color: #fff;
-  border-radius: 7px;
-  font-size: 20px;
-  font-weight: bolder;
-  background-color: rgba(255, 0, 0, 0.452);
-  outline: none;
-  box-shadow: black 2px 2px 5px;
-  text-shadow: black 3px 3px 2px;
-  border: rgba(255, 0, 0, 0) solid 2px;
+.home .news-grid :nth-child(2){
+    grid-column: 2 / 4;
+}
+.home .news-grid :nth-child(4){
+    grid-row: 2 / 4;
+}
+.home .news-grid .grid-item img{
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   object-position: center;
+}
+.home .news-grid .grid-item div{
+   position: absolute;
+   bottom: 10px;
+}
+.home .news-grid .grid-item div p {
+ background-color: rgba(253, 253, 253, 0.750);
 }
 
-.btn-green {
-  background-color: rgba(136, 255, 0, 0.527)!important;
-  
+/* Secondary news(news-column) */
+.home .news-column {
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    max-width: 900px;
 }
-
-.btn-blue {
-  background-color: rgb(76, 0, 255)!important ;
-} */
+.home .news-column .news-item {
+    display: flex;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: rgba(0, 0, 0, 0.375) solid 1px;
+}
+.home .news-column img {
+    width: 200px;
+}
+.home .news-column .news-item-card {
+    margin-left: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.home .news-column .news-item-card :nth-child(1){
+   color: blue;
+}
+.home .news-column .news-item-card :nth-child(2){
+    font-size: 23px;
+    font-weight: bold;
+}
+.home .news-column .news-item-card :nth-child(3){
+   color: rgba(0, 0, 0, 0.85);
+}
+.home .news-column .news-item-card :nth-child(4){
+    color: rgba(0, 0, 0, 0.75);
+}
