--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,23 +1,24 @@
 .signup {
-  margin-top: 25px;
+
   font-family: var(--pageFont);
   height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  grid-column: 4/6;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .signup form {
-  width: 100%;
-  height: 100%;
-  padding: 15px;
+  width: 500px;
+  padding: 50px 37.5px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: rgba(0,0,0,0.1);
+  box-shadow: 15px 15px 10px rgb(0, 0, 0);
 }
 .signup h1 {
-margin-bottom: 25px;
+margin-bottom: 50px;
 }
 
 .signup form input,
@@ -81,7 +82,7 @@ background-color: rgba(0, 255, 0, 0.5);;
 }
 
 
-@media screen and (min-width:500px) {
+/* @media screen and (min-width:500px) {
   .signup {
     margin: auto;
     max-width: 500px;
@@ -98,4 +99,4 @@ background-color: rgba(0, 255, 0, 0.5);;
   .signup {
     width: 700px;
   }
-}
+} */
